--- a/src/main/resources/templates/Cabecalho.html
+++ b/src/main/resources/templates/Cabecalho.html
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-inverse navbar-static-top">
 	<div class="container-fluid">
-		<div class="navbar-header">
+		<div>
 			<a class="navbar-brand" href="#"> 
 			<img alt="banner" th:src="@{/images/banner.jpg}" />
 			 </a>
