--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -4,7 +4,8 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="LayoutPadrao">
 <head>
-<title>Cadastro de Títulos</title>
+<title th:text="#{com.omalotech.cadastro.de.t}"></title>
+<meta charset="utf-8"/>
 </head>
 <section layout:fragment="conteudo">
 
@@ -16,8 +17,8 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<div class="clearfix">
-				<h1 class="panel-title otech-titulo-panel">Novo Título</h1>
-		    	<a class="btn btn-link otech-link-panel" th:href="@{/titulos}">Pesquisa Títulos</a>
+				<h1 class="panel-title otech-titulo-panel" th:text="#{com.omalotech.titulo}"></h1>
+		    	<a class="btn btn-link otech-link-panel" th:href="@{/titulos}" th:text="#{com.omalotech.pesquisa}"></a>
 			</div>
 		</div>
 
@@ -25,7 +26,7 @@
 		<input type="hidden" th:field="*{codigo}" /> <!-- serve para o salvar virar update -->
 		
 			<div class="form-group" th:classappend="${#fields.hasErrors('descricao')} ? has-error">
-				<label for="descricao" class="col-sm-2 control-label">Descrição</label>
+				<label for="descricao" class="col-sm-2 control-label" th:text="#{com.omalotech.descricao}"></label>
 				<div class="col-sm-4">
 					<input type="text" class="form-control" id="descricao" th:field="*{descricao}"
 						 />
@@ -33,8 +34,8 @@
 			</div>
 
 			<div class="form-group" th:classappend="${#fields.hasErrors('dataVencimento')} ? has-error">
-				<label for="dataVencimento" class="col-sm-2 control-label">
-				Data de Vencimento</label>
+				<label for="dataVencimento" class="col-sm-2 control-label" th:text="#{com.omalotech.dataVencimento}">
+				</label>
 				<div class="col-sm-2">
 					<input type="text" class="form-control" id="dataVencimento" th:field="*{dataVencimento}"
 						data-provide="datepicker" data-date-format="dd/mm/yyyy" data-date-language="pt-BR" 
@@ -43,14 +44,14 @@
 			</div>
 
 			<div class="form-group" th:classappend="${#fields.hasErrors('valor')} ? has-error">
-				<label for="valor" class="col-sm-2 control-label">Valor</label>
+				<label for="valor" class="col-sm-2 control-label" th:text="#{com.omalotech.valor}"></label>
 				<div class="col-sm-2">
 					<input type="text" class="form-control js-currency" id="valor" th:field="*{valor}" />
 				</div>
 			</div>
 
 			<div class="form-group" th:classappend="${#fields.hasErrors('status')} ? has-error">
-				<label for="status" class="col-sm-2 control-label">Status</label>
+				<label for="status" class="col-sm-2 control-label" th:text="#{com.omalotech.status}"></label>
 				<div class="col-sm-2">
 					<select class="form-control" id="status" name="status">
 						<option th:each="status: ${todosStatusTitulo}" th:field="*{status}"
@@ -62,7 +63,7 @@
 
 			<div class="form-group">
 				<div class="col-sm-offset-2  col-sm-10">
-					<button type="submit" class="btn btn-primary">Salvar</button>
+					<button type="submit" class="btn btn-primary" th:text="#{com.omalotech.salvar}"></button>
 				</div>
 			</div>
 
