--- a/src/main/resources/templates/DialogoExclusao.html
+++ b/src/main/resources/templates/DialogoExclusao.html
@@ -10,17 +10,17 @@
 		<input type="hidden" name="_method" value="DELETE"/>
 		<div class="modal-content">
 			<div class="modal-header">
-			<h4 class="modal-title">Remoção</h4>
+			<h4 class="modal-title" th:text="#{com.omalotech.remocao}"></h4>
 			</div>
 			
 			<div class="modal-body">
-			<span>Tem Certeza que deseja excluir o registro ?</span>
+			<span th:text="#{com.omalotech.exclusao.msg}"></span>
 			</div>
 			
 			<div class="modal-footer">
 			
-			<button type="button" class="btn btn-link" data-dismiss="modal">Cancelar</button>
-			<button type="submit" class="btn btn-primary" >Excluir</button>
+			<button type="button" class="btn btn-link" data-dismiss="modal" th:text="#{com.omalotech.cancelar}"></button>
+			<button type="submit" class="btn btn-primary" th:text="#{com.omalotech.excluir}">r</button>
 			</div>
 			
 		</div>
