Auto stash before merge of "master" and "origin/master"

--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -109,7 +109,7 @@
 					</tbody>
 				</table>
 				 <br></br>
-				 <h4 class="text-left"><a th:href="@{/tituloClient/pesquisa}">Pesquisa por usuário via Rest</a></h4>
+				<!--  <h4 class="text-left"><a th:href="@{/tituloClient/pesquisa}">Pesquisa por usuário via Rest</a></h4>  -->
 			</div>
 		</div>
 		
